[gd_scene load_steps=6 format=2]

[ext_resource path="res://Menu/WinScreen.gd" type="Script" id=1]
[ext_resource path="res://Menu/menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://Menu/MenuSMB.png" type="Texture" id=3]
[ext_resource path="res://SFX/NSMB/BGM_ROUND_WIN.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "FadeOut"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="WinScreen" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="MarginContainer" type="CenterContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -128.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
show_behind_parent = true
margin_right = 310.0
margin_bottom = 150.0
rect_min_size = Vector2( 310, 150 )
texture = ExtResource( 3 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 35.0
margin_top = 18.0
margin_right = 275.0
margin_bottom = 132.0
grow_horizontal = 0
grow_vertical = 0

[node name="Winner" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 240.0
margin_bottom = 90.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 90 )
text = "Player won the game!"
align = 1
valign = 1

[node name="space" type="Label" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 94.0
margin_right = 240.0
margin_bottom = 114.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 20 )
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 94.0
margin_right = 240.0
margin_bottom = 114.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 0, 20 )
alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 20.0
margin_right = 220.0
margin_bottom = 20.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 200, 0 )
text = "Next Round"

[node name="WinMoment" type="Timer" parent="."]
autostart = true

[node name="ContinuePopUp" type="Timer" parent="."]
wait_time = 3.0

[node name="FullscreenOverlay" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="OverlayAnimation" type="AnimationPlayer" parent="FullscreenOverlay"]
anims/FadeOut = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="FullscreenOverlay"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="WinTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 14.0
bus = "Music"
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="timeout" from="WinMoment" to="." method="_on_WinMoment_timeout"]
[connection signal="timeout" from="ContinuePopUp" to="." method="_on_ContinuePopUp_timeout"]
